--- a/theme.css
+++ b/theme.css
@@ -1,4 +1,4 @@
 a:link {color: green;} text-decoration: none;
 a:visited {color: red;}
-a:hover {color: orange;}
+a:hover {color: pink;}
 a:active {color: blue;}
